Bug 215361 - SL-6000 zaurus USB error - 'bad CDC descriptors'
Summary: SL-6000 zaurus USB error - 'bad CDC descriptors'
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: USB (show other bugs)
Hardware: All Linux
: P1 low
Assignee: Default virtual assignee for Drivers/USB
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-19 06:14 UTC by Ross Maynard
Modified: 2022-04-22 04:00 UTC (History)
1 user (show)

See Also:
Kernel Version: 3/4/5
Subsystem:
Regression: No
Bisected commit-id:


Attachments
bisect.log (2.45 KB, text/x-log)
2022-01-16 04:23 UTC, Ross Maynard
Details
lsusb.txt (2.72 KB, text/plain)
2022-01-27 07:46 UTC, Ross Maynard
Details
another special case (2.73 KB, patch)
2022-01-27 15:50 UTC, Oliver Neukum
Details | Diff

Description Ross Maynard 2021-12-19 06:14:00 UTC
A 'bad CDC descriptors' error occurs when plugging the Sharp SL-6000 zaurus into USB. It was working in 2.6.32 but has been broken from kernel 3 onwards.

usb 5-2: new full-speed USB device number 2 using uhci_hcd
usb 5-2: New USB device found, idVendor=04dd, idProduct=9032
usb 5-2: New USB device strings: Mfr=1, Product=2, SerialNumber=0
usb 5-2: Product: SL-6000
usb 5-2: Manufacturer: Sharp
usb 5-2: bad CDC descriptors
usbcore: registered new interface driver cdc_ether

In 2.6.32 the following lines were included in dmesg:

usb0: register 'zaurus' at usb-0000:00:14.0-2, pseudo-MDLM (BLAN) device, fe:1b:05:23:49:7f
usbcore: registered new interface driver zaurus
Comment 1 Ross Maynard 2021-12-19 20:46:40 UTC
Correction:

In 2.6.32 the following lines were included in dmesg:

usbcore: registered new interface driver cdc_ether
usbcore: registered new interface driver zaurus
usb0: register 'zaurus' at usb-0000:00:14.0-2, pseudo-MDLM (BLAN) device, fe:1b:05:23:49:7f
usbcore: registered new interface driver zaurus
Comment 2 Ross Maynard 2021-12-19 22:27:33 UTC
Correction:

In 2.6.32 the following lines were included in dmesg:

usbcore: registered new interface driver cdc_ether
usb0: register 'zaurus' at usb-0000:00:14.0-2, pseudo-MDLM (BLAN) device, fe:1b:05:23:49:7f
usbcore: registered new interface driver zaurus
Comment 3 Greg Kroah-Hartman 2021-12-20 08:37:21 UTC
On Sun, Dec 19, 2021 at 06:14:00AM +0000, bugzilla-daemon@bugzilla.kernel.org wrote:
> A 'bad CDC descriptors' error occurs when plugging the Sharp SL-6000 zaurus
> into USB. It was working in 2.6.32 but has been broken from kernel 3 onwards.

2.6.32 was released in 2009, and 3.0 was released in 2011.  Can you
please try a more modern kernel like 5.15, or ask for support from the
vendor that is forcing you to use older kernels?

Or, can you use 'git bisect' between the working and failing kernel
versions to track down the offending commit?

thanks,

greg k-h
Comment 4 Ross Maynard 2021-12-21 08:07:37 UTC
Hi Greg,

1. I tried connecting the SL-6000 in kernel 5.14.10, but got the same error:

usb 1-1: New USB device found, idVendor=04dd, idProduct=9032, bcdDevice= 
0.00
usb 1-1: New USB device strings: Mfr=1, Product=2, SerialNumber=0
usb 1-1: Product: SL-6000
usb 1-1: Manufacturer: Sharp
usb 1-1: bad CDC descriptors
usbcore: registered new interface driver cdc_ether

As a side note, I also tried it with my SL-5600 with the same result.

2. The latest kernel I could find that would connect my Zaurus was 
2.6.38. I did get the "bad CDC descriptors" message, but the zaurus 
module loaded anyway:

usb 1-1: bad CDC descriptors
usbcore: registered new interface driver cdc_ether
zaurus 1-1:1.0: usb0: register 'zaurus' at usb-0000:00:14.0-1, 
pseudo-MDLM (BLAN) device, ea:30:12:ff:59:20
usbcore: registered new interface driver zaurus

3. I then tested with kernel 3.0. That did not work, and the zaurus 
module did not load:

usb 1-1: new full speed USB device number 4 using xhci_hcd
usb 1-1: bad CDC descriptors
usbcore: registered new interface driver cdc_ether

I am wondering if there was a change in the cdc_ether or zaurus modules 
that caused it to stop working in 3.0.


On 20/12/21 7:37 pm, bugzilla-daemon@bugzilla.kernel.org wrote:
> https://bugzilla.kernel.org/show_bug.cgi?id=215361
>
> --- Comment #3 from Greg Kroah-Hartman (greg@kroah.com) ---
> On Sun, Dec 19, 2021 at 06:14:00AM +0000, bugzilla-daemon@bugzilla.kernel.org
> wrote:
>> A 'bad CDC descriptors' error occurs when plugging the Sharp SL-6000 zaurus
>> into USB. It was working in 2.6.32 but has been broken from kernel 3
>> onwards.
> 2.6.32 was released in 2009, and 3.0 was released in 2011.  Can you
> please try a more modern kernel like 5.15, or ask for support from the
> vendor that is forcing you to use older kernels?
>
> Or, can you use 'git bisect' between the working and failing kernel
> versions to track down the offending commit?
>
> thanks,
>
> greg k-h
>
Comment 5 Greg Kroah-Hartman 2021-12-21 08:20:40 UTC
On Tue, Dec 21, 2021 at 08:07:37AM +0000, bugzilla-daemon@bugzilla.kernel.org wrote:
> I am wondering if there was a change in the cdc_ether or zaurus modules 
> that caused it to stop working in 3.0.

There probably is.  Can you please use 'git bisect' between those two
versions to find the offending change?

thanks,

greg k-h
Comment 6 Ross Maynard 2022-01-16 04:23:55 UTC
Created attachment 300276 [details]
bisect.log

Hi Greg,

I found the patch:

Bisecting: 0 revisions left to test after this (roughly 0 steps)
[16adf5d07987d93675945f3cecf0e33706566005] usbnet: Remove over-broad 
module alias from zaurus.


On 21/12/21 7:20 pm, bugzilla-daemon@bugzilla.kernel.org wrote:
> https://bugzilla.kernel.org/show_bug.cgi?id=215361
>
> --- Comment #5 from Greg Kroah-Hartman (greg@kroah.com) ---
> On Tue, Dec 21, 2021 at 08:07:37AM +0000, bugzilla-daemon@bugzilla.kernel.org
> wrote:
>> I am wondering if there was a change in the cdc_ether or zaurus modules
>> that caused it to stop working in 3.0.
> There probably is.  Can you please use 'git bisect' between those two
> versions to find the offending change?
>
> thanks,
>
> greg k-h
>
Comment 7 Greg Kroah-Hartman 2022-01-26 12:32:02 UTC
On Sun, Jan 16, 2022 at 04:23:55AM +0000, bugzilla-daemon@bugzilla.kernel.org wrote:
> https://bugzilla.kernel.org/show_bug.cgi?id=215361
> 
> --- Comment #6 from Ross Maynard (bids.7405@bigpond.com) ---
> Hi Greg,
> 
> I found the patch:
> 
> Bisecting: 0 revisions left to test after this (roughly 0 steps)
> [16adf5d07987d93675945f3cecf0e33706566005] usbnet: Remove over-broad 
> module alias from zaurus.

Great, can you send this information to the linux-usb mailing list so we
know what id to add to the driver?

thanks,

greg k-h
Comment 8 Ross Maynard 2022-01-27 02:25:58 UTC
Hi Greg,

I have sent an email to linux-usb@vger.kernel.org.

Thanks

On 26/1/22 11:32 pm, bugzilla-daemon@bugzilla.kernel.org wrote:
> https://bugzilla.kernel.org/show_bug.cgi?id=215361
>
> --- Comment #7 from Greg Kroah-Hartman (greg@kroah.com) ---
> On Sun, Jan 16, 2022 at 04:23:55AM +0000, bugzilla-daemon@bugzilla.kernel.org
> wrote:
>> https://bugzilla.kernel.org/show_bug.cgi?id=215361
>>
>> --- Comment #6 from Ross Maynard (bids.7405@bigpond.com) ---
>> Hi Greg,
>>
>> I found the patch:
>>
>> Bisecting: 0 revisions left to test after this (roughly 0 steps)
>> [16adf5d07987d93675945f3cecf0e33706566005] usbnet: Remove over-broad
>> module alias from zaurus.
> Great, can you send this information to the linux-usb mailing list so we
> know what id to add to the driver?
>
> thanks,
>
> greg k-h
>
Comment 9 Oliver Neukum 2022-01-27 06:00:10 UTC
The SL-6000 is explicitly listed with the device and vendor IDs given here. Looks like multiple versions of the same device. Please give the output of 'lsusb -v' for your device.
Comment 10 Ross Maynard 2022-01-27 07:45:59 UTC
Created attachment 300333 [details]
lsusb.txt

Hi Oliver,

Please see attached: lsusb.txt

Thanks

On 27/1/22 5:00 pm, bugzilla-daemon@bugzilla.kernel.org wrote:
> https://bugzilla.kernel.org/show_bug.cgi?id=215361
>
> Oliver Neukum (oliver@neukum.org) changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                   CC|                            |oliver@neukum.org
>
> --- Comment #9 from Oliver Neukum (oliver@neukum.org) ---
> The SL-6000 is explicitly listed with the device and vendor IDs given here.
> Looks like multiple versions of the same device. Please give the output of
> 'lsusb -v' for your device.
>
Comment 11 Oliver Neukum 2022-01-27 15:50:48 UTC
Created attachment 300340 [details]
another special case

Please try this patch
Comment 12 Ross Maynard 2022-01-28 23:52:20 UTC
Hi Oliver,

I applied the patch, and was able to ping and ssh into my SL-6000.

Thanks!

On 28/1/22 2:50 am, bugzilla-daemon@bugzilla.kernel.org wrote:
> https://bugzilla.kernel.org/show_bug.cgi?id=215361
>
> --- Comment #11 from Oliver Neukum (oliver@neukum.org) ---
> Created attachment 300340 [details]
>    --> https://bugzilla.kernel.org/attachment.cgi?id=300340&action=edit
> another special case
>
> Please try this patch
>

Note You need to log in before you can comment on or make changes to this bug.